--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Jose Donizetti
 email: jdbjunior@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  programming and stuff.
+  writing to learn.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: josedonizetti
